--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
     "morgan": "^1.10.0",
-    "uuid": "^11.1.0"
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.0",
+    "uuid": "^11.1.0",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
