Chatbot in all pages

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
+    "openai": "^4.89.0",
     "uuid": "^11.1.0",
     "validator": "^13.12.0"
   },
